--- a/t-supporter-quiz.html
+++ b/t-supporter-quiz.html
@@ -42,7 +42,75 @@
             </div>
             <button type="submit">Quiz abschließen</button>
         </form>
+        <p id="quizMessage"></p>
     </main>
     <script src="scripts.js"></script>
+    <script>
+        // JavaScript für die Quiz-Wartezeit
+        const quizForm = document.getElementById('quizForm');
+        const quizMessage = document.getElementById('quizMessage');
+
+        quizForm.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const answers = {
+                question1: 'A',
+                question2: 'C',
+                question3: 'B',
+                question4: 'B'
+            };
+
+            let score = 0;
+            const formData = new FormData(event.target);
+            let userAnswers = {};
+
+            for (let [question, answer] of formData.entries()) {
+                if (question !== 'name') {
+                    userAnswers[question] = answer;
+                    if (answer === answers[question]) {
+                        score++;
+                    }
+                }
+            }
+
+            const MAX_ATTEMPTS = 1; // Maximale Anzahl an Fehlversuchen
+            const BASE_WAIT_TIME = 60 * 60 * 1000; // 1 Stunde in Millisekunden
+            const additionalTime = (MAX_ATTEMPTS - score) * 5 * 60 * 1000; // Zusätzliche 5 Minuten pro Fehlversuch
+
+            if (score === 4) {
+                quizMessage.textContent = `Glückwunsch! Du hast das Quiz bestanden.`;
+                sendEmail(formData.get('name'), userAnswers);
+            } else {
+                quizMessage.textContent = `Leider hast du das Quiz nicht bestanden. Versuche es später erneut.`;
+                const waitTime = BASE_WAIT_TIME + additionalTime;
+                setWaitTime(waitTime);
+            }
+
+            // Formular zurücksetzen
+            event.target.reset();
+        });
+
+        function setWaitTime(waitTime) {
+            const endTime = new Date().getTime() + waitTime;
+
+            function updateTimer() {
+                const now = new Date().getTime();
+                const remainingTime = endTime - now;
+
+                if (remainingTime <= 0) {
+                    quizMessage.textContent = ''; // Wartezeit abgelaufen, Nachricht löschen
+                } else {
+                    const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
+                    const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
+                    quizMessage.textContent = `Bitte warte ${minutes} Minuten und ${seconds} Sekunden, bevor du es erneut versuchst.`;
+                    setTimeout(updateTimer, 1000);
+                }
+            }
+
+            updateTimer();
+        }
+
+
+    </script>
 </body>
 </html>
