--- a/t-supporter-quiz.html
+++ b/t-supporter-quiz.html
@@ -46,7 +46,6 @@
     </main>
     <script src="scripts.js"></script>
     <script>
-        // JavaScript für die Quiz-Wartezeit
         const quizForm = document.getElementById('quizForm');
         const quizMessage = document.getElementById('quizMessage');
 
@@ -73,7 +72,7 @@
                 }
             }
 
-            const MAX_ATTEMPTS = 1; // Maximale Anzahl an Fehlversuchen
+            const MAX_ATTEMPTS = 3; // Maximale Anzahl an Fehlversuchen
             const BASE_WAIT_TIME = 60 * 60 * 1000; // 1 Stunde in Millisekunden
             const additionalTime = (MAX_ATTEMPTS - score) * 5 * 60 * 1000; // Zusätzliche 5 Minuten pro Fehlversuch
 
@@ -81,7 +80,6 @@
                 quizMessage.textContent = `Glückwunsch! Du hast das Quiz bestanden.`;
                 sendEmail(formData.get('name'), userAnswers);
             } else {
-                quizMessage.textContent = `Leider hast du das Quiz nicht bestanden. Versuche es später erneut.`;
                 const waitTime = BASE_WAIT_TIME + additionalTime;
                 setWaitTime(waitTime);
             }
@@ -91,26 +89,17 @@
         });
 
         function setWaitTime(waitTime) {
-            const endTime = new Date().getTime() + waitTime;
+            quizMessage.textContent = `Leider hast du das Quiz nicht bestanden. Bitte warte, bevor du es erneut versuchst.`;
 
-            function updateTimer() {
-                const now = new Date().getTime();
-                const remainingTime = endTime - now;
-
-                if (remainingTime <= 0) {
-                    quizMessage.textContent = ''; // Wartezeit abgelaufen, Nachricht löschen
-                } else {
-                    const minutes = Math.floor((remainingTime % (1000 * 60 * 60)) / (1000 * 60));
-                    const seconds = Math.floor((remainingTime % (1000 * 60)) / 1000);
-                    quizMessage.textContent = `Bitte warte ${minutes} Minuten und ${seconds} Sekunden, bevor du es erneut versuchst.`;
-                    setTimeout(updateTimer, 1000);
-                }
-            }
-
-            updateTimer();
+            setTimeout(() => {
+                quizMessage.textContent = '';
+            }, waitTime);
         }
 
-
+        function sendEmail(name, userAnswers) {
+            // Hier den Code für das Senden der E-Mail einfügen
+            // (nicht im Beispiel enthalten, da es serverseitige Logik erfordert)
+        }
     </script>
 </body>
 </html>
