--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
         <h1>TitanCraft SMP Team Webseite</h1>
         <nav>
-            <ul>
+            <input type="checkbox" id="menuToggle">
+            <label for="menuToggle" class="menu-icon">&#9776;</label>
+            <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#quizzes">Quizzes</a></li>
                 <li><a href="#tasks">Aufgaben</a></li>
