--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@
             <select id="quizSelect">
                 <option value="">Wählen Sie ein Quiz</option>
                 <option value="tsupporter">T-Supporter zu Supporter</option>
-                <!-- Weitere Quizoptionen können hier hinzugefügt werden -->
             </select>
             <div id="quizContainer" style="display:none;">
-                <form id="quizForm">
-                    <!-- Quizfragen werden hier dynamisch eingefügt -->
-                </form>
+                <form id="quizForm"></form>
                 <p id="quizMessage"></p>
             </div>
         </section>
@@ -80,11 +77,8 @@
                 <option value="moderator">Moderator</option>
                 <option value="srmoderator">SR-Moderator</option>
                 <option value="admin">Admin</option>
-                <!-- Weitere Ränge können hier hinzugefügt werden -->
             </select>
-            <div id="taskContainer" style="display:none;">
-                <!-- Aufgaben werden hier dynamisch eingefügt -->
-            </div>
+            <div id="taskContainer" style="display:none;"></div>
         </section>
     </main>
     <footer>
