--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
             <h2>Profil</h2>
             <form id="profileForm">
                 <div>
-                    <label for="email">E-Mail:</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email">
                 </div>
                 <button type="submit">Speichern</button>
             </form>
-            <p id="profileMessage"></p>
         </div>
         <div id="quizzes" style="display:none;">
             <h2>Quizzes</h2>
