--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             <form id="profileForm">
                 <div>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="password">Neues Passwort:</label>
+                    <input type="password" id="newPassword" name="newPassword">
                 </div>
                 <button type="submit">Speichern</button>
             </form>
